--- a/SWProjv1/SearchPage.xaml
+++ b/SWProjv1/SearchPage.xaml
@@ -7,7 +7,6 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="SearchPage">
-
     <Grid Background="#FFE5E5E5" Name="grid">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.05*"/>
@@ -23,6 +22,10 @@
         <TextBox Grid.Row="1"/>
         <Button Name="search_btn" Content="Search" Click="search_btn_Click" Grid.Row="2"/>
         <ListBox Name="searchItems" Grid.Row="3"/>
+        <Button Name ="CreateButton" Grid.Row="0" Grid.Column="1" Content="New Message" Visibility="Hidden"/>
+        <TextBox Name="Student_Number" Grid.Row="1" Grid.Column="1" Text="UserNumber" Visibility="Hidden"/>
+        <Button Name="Send" Grid.Row="2" Grid.Column="1" Content="SEND" Visibility="Hidden" Click="Send_Click"/>
+        <TextBox Name="MessageText" Grid.Row="3" Grid.Column="1" Text="Message Text" Visibility="Hidden"/>
         <!--Grid Name="searchItem" Grid.Row="3" Grid.Column="1">
             <TextBlock Name="searchText_test" Text="BBBBB"/>
         </-->
